--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pet-paradise-dashboard",
+  "name": "afiliado-seuagente-ai",
   "version": "0.0.0",
   "private": true,
   "description": "**URL**: https://lovable.dev/projects/3b798310-9314-49a9-9604-c5927962c5fd",
